# glslang

./: .appveyor.yml  .gitignore  CMakeLists.txt  glslang.ib
NGFX/: CMakeLists.txt
NGFX/Public/: ngfx.h  ngfx_shader_compiler.h
NGFX/Source/: ngfx_glslang_compiler.cpp  ngfx_hlsl_dxbc_compiler.cpp  ngfx_shader_compiler.cpp  ngfx_shader_compiler_private.h  ngfx_shader_compiler_test.cpp
SPIRV/: GLSL.ext.KHR.h  GlslangToSpv.cpp
Test/: hlsl.dxr.closesthit.hlsl  hlsl.dxr.miss.hlsl  hlsl.dxr.raygen.hlsl
Test/inc2/: hlsl.dxr.common.h
glslang/: CMakeLists.txt
glslang/Include/: intermediate.h
glslang/MachineIndependent/: Initialize.cpp  Initialize.h  ParseContextBase.cpp  ParseHelper.cpp  ParseHelper.h  Scan.cpp  ScanContext.h  ShaderLang.cpp  attribute.cpp  attribute.h  limits.cpp  localintermediate.h
glslang/Public/: ShaderLang.h
hlsl/: DXR_Intrins.md  hlslAttributes.cpp  hlslAttributes.h  hlslGrammar.cpp  hlslGrammar.h  hlslParseHelper.cpp  hlslParseables.cpp  hlslParseables.h  hlslScanContext.cpp  hlslTokens.h
ngfxCompiler/: CMakeLists.txt
ngfxCompiler/Hlslab/: CMakeLists.txt  ngfxShader.h  ngfxShader_p.h
